# TinyWeatherBot

./: .gitignore  README.md  config.py  constants.py  main.py  parser.py  pyproject.toml
api_handlers/: dadata_api_handler.py  weather_api_handler.py
handlers/: dadata_api_handler.py  file_handler.py  weather_api_handler.py
