[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Kirill Tuchkin <volkirtu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.11.0"
update = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
